--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@
 buildscript {
     
     repositories {
-        google()
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -18,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url 'https://jitpack.io' }
         jcenter()
     }
 }
