--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    debugImplementation 'com.github.whataa:pandora:v1.3.2'
+    releaseImplementation 'com.github.whataa:pandora-no-op:v1.3.2'
 }
