--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "com.gerryrun.childeducation"
+        applicationId "com.gerryrun.childeducation.piano"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 100
@@ -31,7 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     /*    debugImplementation 'com.github.whataa:pandora:v1.3.2'
-                releaseImplementation 'com.github.whataa:pandora-no-op:v1.3.2'*/
+                    releaseImplementation 'com.github.whataa:pandora-no-op:v1.3.2'*/
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
