--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+//    com.android.support:recyclerview-v7:27.1.1
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -33,5 +35,7 @@ dependencies {
     /*    debugImplementation 'com.github.whataa:pandora:v1.3.2'
                     releaseImplementation 'com.github.whataa:pandora-no-op:v1.3.2'*/
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation ('com.squareup.picasso:picasso:2.71828'){
+        exclude group: 'com.android.support'
+    }
 }
